# scan

./: CHANGELOG.md  Cargo.toml  Containerfile.ubi  README.md  clippy.toml  deny.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: bootstrap.rs  config.rs  cookie_auth.rs  main.rs  middleware.rs  state.rs
backend/src/routes/: leaderboard.rs  metrics_endpoint.rs  pwa_manifest.rs  ready.rs
backend/src/routes/auth/: mod.rs  origin_check.rs  origin_check_tests.rs  verify_pin.rs
backend/tests/: edge_cases.rs  leaderboard.rs
frontend/: Cargo.toml  index.html  service-worker.js
frontend/Assets/: app.css
frontend/src/: api.rs
frontend/src/components/: mod.rs  scan_board.rs  scan_game.rs  scan_leaderboard.rs  scan_logic.rs  scan_overlay.rs
